Opnieuw gestart met implementatie tonen spelbord

--- a/src/gui/Blieb.fxml
+++ b/src/gui/Blieb.fxml
@@ -1,15 +1,33 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-
-<fx:root maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="658.0" prefWidth="850.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
+<fx:root maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="867.0" prefWidth="1550.0" type="AnchorPane" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Button fx:id="button" layoutX="95.0" layoutY="63.0" mnemonicParsing="false" prefHeight="106.0" prefWidth="160.0">
+      <ImageView fx:id="achtergrondAfbeelding" fitHeight="901.0" fitWidth="1816.0" layoutX="-251.0" layoutY="-21.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../images/achtergrond%20-%20kopie.jpg" />
+         </image>
+      </ImageView>
+      <Label fx:id="RondeWeergave" layoutX="629.0" layoutY="71.0" text="Ronde" />
+      <Label fx:id="spelerNaamWeergave" layoutX="92.0" layoutY="69.0" text="Spelernaam" />
+      <Button fx:id="button" layoutX="624.0" layoutY="148.0" mnemonicParsing="false" prefHeight="106.0" prefWidth="160.0">
          <graphic>
-            <ImageView fx:id="view" fitHeight="109.0" fitWidth="91.0" pickOnBounds="true" preserveRatio="true" />
+            <ImageView fx:id="edeleTest" fitHeight="150.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true" />
+         </graphic>
+      </Button>
+      <Button fx:id="button1" layoutX="811.0" layoutY="146.0" mnemonicParsing="false" prefHeight="106.0" prefWidth="160.0">
+         <graphic>
+            <ImageView fx:id="edeleTest1" fitHeight="150.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true" />
+         </graphic>
+      </Button>
+      <Button fx:id="button11" layoutX="1023.0" layoutY="145.0" mnemonicParsing="false" prefHeight="106.0" prefWidth="160.0">
+         <graphic>
+            <ImageView fx:id="edeleTest11" fitHeight="150.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true" />
          </graphic>
       </Button>
    </children>
