--- a/src/gui/OverzichtSpelers.fxml
+++ b/src/gui/OverzichtSpelers.fxml
@@ -1,32 +1,42 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
-<fx:root maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="586.0" prefWidth="600.0" type="AnchorPane" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
+
+<fx:root type="StackPane" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <ImageView fitHeight="603.0" fitWidth="606.0" layoutX="-1.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="603.0" fitWidth="606.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../images/splendor.jpg" />
          </image>
       </ImageView>
-      <Rectangle arcHeight="5.0" arcWidth="5.0" blendMode="OVERLAY" fill="#1f93ff00" height="512.0" layoutX="41.0" layoutY="37.0" stroke="WHITE" strokeType="INSIDE" strokeWidth="5.0" width="520.0" />
-      <Label layoutX="77.0" layoutY="95.0" text="Overzicht Spelers" textFill="WHITE">
-         <font>
-            <Font name="GothicI" size="47.0" />
-         </font>
-         <effect>
-            <DropShadow />
-         </effect>
-      </Label>
-      <Button fx:id="btnTerug" layoutX="269.0" layoutY="499.0" mnemonicParsing="false" onAction="#btnTerugClicked" prefHeight="25.0" prefWidth="62.0" text="Terug" />
-      <TextArea fx:id="txaSpelers" layoutX="69.0" layoutY="232.0" prefHeight="254.0" prefWidth="463.0" />
+      <Rectangle arcHeight="5.0" arcWidth="5.0" blendMode="OVERLAY" fill="#1f93ff00" height="512.0" stroke="WHITE" strokeType="INSIDE" strokeWidth="5.0" width="520.0" />
+      <VBox alignment="CENTER" spacing="30.0">
+         <children>
+            <Label alignment="CENTER" text="Overzicht Spelers" textFill="WHITE">
+               <font>
+                  <Font name="GothicI" size="47.0" />
+               </font>
+               <effect>
+                  <DropShadow />
+               </effect>
+            </Label>
+            <TextArea fx:id="txaSpelers" maxWidth="-Infinity" prefHeight="254.0" prefWidth="400.0" />
+            <Button fx:id="btnTerug" mnemonicParsing="false" onAction="#btnTerugClicked" prefHeight="25.0" prefWidth="62.0" text="Terug" />
+         </children>
+         <padding>
+            <Insets bottom="50.0" left="50.0" right="50.0" top="50.0" />
+         </padding>
+      </VBox>
    </children>
 </fx:root>
