--- a/src/gui/Start.fxml
+++ b/src/gui/Start.fxml
@@ -4,36 +4,47 @@
 <?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<fx:root maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="586.0" prefWidth="600.0" type="AnchorPane" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
+
+<fx:root type="StackPane" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <ImageView fx:id="BGImage" fitHeight="612.0" fitWidth="626.0" layoutX="-9.0" layoutY="-25.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="BGImage" fitHeight="612.0" fitWidth="626.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../images/splendor.jpg" />
          </image>
       </ImageView>
-      <Rectangle fx:id="kader" arcHeight="5.0" arcWidth="5.0" blendMode="OVERLAY" fill="#1f93ff00" height="525.0" layoutX="33.0" layoutY="26.0" stroke="WHITE" strokeType="INSIDE" strokeWidth="5.0" width="541.0" />
-      <Button fx:id="btnSpelen" blendMode="SCREEN" focusTraversable="false" layoutX="63.0" layoutY="361.0" mnemonicParsing="false" onAction="#btnSpelenClicked" prefHeight="55.0" prefWidth="233.0" text="Spelen">
-         <font>
-            <Font size="30.0" />
-         </font>
-      </Button>
-      <Button fx:id="btnPlay" blendMode="SCREEN" focusTraversable="false" layoutX="310.0" layoutY="361.0" mnemonicParsing="false" onAction="#btnSpelenClicked" prefHeight="55.0" prefWidth="233.0" text="Play">
-         <font>
-            <Font size="30.0" />
-         </font>
-      </Button>
-      <Text fx:id="titelSpel" fill="WHITE" layoutX="80.0" layoutY="286.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Splendor" textAlignment="CENTER" wrappingWidth="446.19054412841797">
-         <font>
-            <Font name="GothicI" size="96.0" />
-         </font>
-         <effect>
-            <DropShadow />
-         </effect>
-      </Text>
+      <Rectangle fx:id="kader" arcHeight="5.0" arcWidth="5.0" blendMode="OVERLAY" fill="#1f93ff00" height="525.0" stroke="WHITE" strokeType="INSIDE" strokeWidth="5.0" width="541.0" />
+      <VBox alignment="CENTER" spacing="30.0">
+         <children>
+            <Text fx:id="titelSpel" fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Splendor" textAlignment="CENTER" wrappingWidth="446.19054412841797">
+               <font>
+                  <Font name="GothicI" size="96.0" />
+               </font>
+               <effect>
+                  <DropShadow />
+               </effect>
+            </Text>
+            <HBox alignment="CENTER" spacing="30.0">
+               <children>
+                  <Button fx:id="btnSpelen" blendMode="SCREEN" focusTraversable="false" mnemonicParsing="false" onAction="#btnSpelenClicked" prefHeight="55.0" prefWidth="233.0" text="Spelen">
+                     <font>
+                        <Font size="30.0" />
+                     </font>
+                  </Button>
+                  <Button fx:id="btnPlay" blendMode="SCREEN" focusTraversable="false" mnemonicParsing="false" onAction="#btnSpelenClicked" prefHeight="55.0" prefWidth="233.0" text="Play">
+                     <font>
+                        <Font size="30.0" />
+                     </font>
+                  </Button>
+               </children>
+            </HBox>
+         </children>
+      </VBox>
    </children>
 </fx:root>
