--- a/src/gui/StartSpel.fxml
+++ b/src/gui/StartSpel.fxml
@@ -27,7 +27,7 @@
          <children>
             <HBox alignment="CENTER" prefHeight="118.0" prefWidth="2183.0">
                <children>
-                  <Label fx:id="lblSpelerNaam" prefHeight="61.0" prefWidth="800.0" textFill="#8e0000">
+                  <Label fx:id="lblSpelerNaam" prefHeight="61.0" prefWidth="382.0" text="Lange naam" textFill="#8e0000">
                      <font>
                         <Font name="GothicI" size="49.0" />
                      </font>
@@ -35,7 +35,17 @@
                         <Insets bottom="30.0" left="30.0" right="30.0" top="30.0" />
                      </HBox.margin>
                   </Label>
-                  <Label fx:id="lblRondeNr" alignment="CENTER_RIGHT" prefHeight="61.0" prefWidth="800.0" textFill="#8e0000">
+                  <Label fx:id="lblPrestigepunten" prefHeight="92.0" prefWidth="187.0" text="Totaal aantal prestigepunten:" wrapText="true">
+                     <font>
+                        <Font size="25.0" />
+                     </font>
+                  </Label>
+                  <Label fx:id="aantalPrestigePunten" text="0">
+                     <font>
+                        <Font size="25.0" />
+                     </font>
+                  </Label>
+                  <Label fx:id="lblRondeNr" alignment="CENTER_RIGHT" prefHeight="61.0" prefWidth="1207.0" text="Ronde test" textFill="#8e0000">
                      <font>
                         <Font name="GothicI" size="49.0" />
                      </font>
@@ -52,9 +62,10 @@
                <children>
                   <GridPane alignment="CENTER" prefHeight="924.0" prefWidth="634.0">
                      <columnConstraints>
-                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="317.36688232421875" minWidth="10.0" prefWidth="212.43519592285156" />
-                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="357.3739013671875" minWidth="10.0" prefWidth="222.60421752929688" />
-                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="357.3739013671875" minWidth="10.0" prefWidth="199.39578247070312" />
+                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="317.36688232421875" minWidth="10.0" prefWidth="153.28878784179688" />
+                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="357.3739013671875" minWidth="10.0" prefWidth="27.85919189453125" />
+                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="357.3739013671875" minWidth="10.0" prefWidth="228.7183837890625" />
+                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="357.3739013671875" minWidth="10.0" prefWidth="237.7816162109375" />
                      </columnConstraints>
                      <rowConstraints>
                         <RowConstraints maxHeight="492.3739013671875" minHeight="10.0" prefHeight="480.5394287109375" vgrow="SOMETIMES" />
@@ -73,7 +84,7 @@
                               <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                            </GridPane.margin>
                         </Button>
-                        <Button fx:id="btnStartRonde" mnemonicParsing="false" onAction="#btnStartRondeClicked" prefHeight="38.0" prefWidth="198.0" text="Start Ronde" GridPane.columnIndex="1" GridPane.rowIndex="5">
+                        <Button fx:id="btnStartRonde" mnemonicParsing="false" onAction="#btnStartRondeClicked" prefHeight="38.0" prefWidth="198.0" text="Start Ronde" GridPane.columnIndex="2" GridPane.rowIndex="5">
                            <font>
                               <Font name="RomanC" size="12.0" />
                            </font>
@@ -191,27 +202,27 @@
                         <Button fx:id="btnOnyxSpel" mnemonicParsing="false" onAction="#btnOnyxSpelClicked" prefHeight="76.0" prefWidth="149.0" scaleX="0.7" scaleY="0.7" style="-fx-background-color: nofill;" GridPane.columnIndex="1" />
                         <Button fx:id="btnEdele5" mnemonicParsing="false" onAction="#btnEdele5Clicked" scaleX="0.7" scaleY="0.7" style="-fx-background-color: nofill;" GridPane.rowIndex="2" />
                         <Button fx:id="btnSmaragdSpel" mnemonicParsing="false" onAction="#btnSmaragdSpelClicked" prefHeight="98.0" prefWidth="92.0" scaleX="0.7" scaleY="0.7" style="-fx-background-color: nofill;" GridPane.rowIndex="1" />
-                        <Label fx:id="lblRobijnSpelAantal" text="0" GridPane.columnIndex="4">
+                        <Label fx:id="lblRobijnSpelAantal" GridPane.columnIndex="4">
                            <font>
                               <Font name="RomanC" size="16.0" />
                            </font>
                         </Label>
-                        <Label fx:id="lblSmaragdSpelAantal" text="0">
+                        <Label fx:id="lblSmaragdSpelAantal">
                            <font>
                               <Font name="RomanC" size="16.0" />
                            </font>
                         </Label>
-                        <Label fx:id="lblDiamantSpelAantal" text="0" GridPane.columnIndex="2">
+                        <Label fx:id="lblDiamantSpelAantal" GridPane.columnIndex="2">
                            <font>
                               <Font name="RomanC" size="16.0" />
                            </font>
                         </Label>
-                        <Label fx:id="lblSaffierSpelAantal" text="0" GridPane.columnIndex="3">
+                        <Label fx:id="lblSaffierSpelAantal" GridPane.columnIndex="3">
                            <font>
                               <Font name="RomanC" size="16.0" />
                            </font>
                         </Label>
-                        <Label fx:id="lblOnyxSpelAantal" text="0" GridPane.columnIndex="1">
+                        <Label fx:id="lblOnyxSpelAantal" GridPane.columnIndex="1">
                            <font>
                               <Font name="RomanC" size="16.0" />
                            </font>
