--- a/src/gui/StartSpel.fxml
+++ b/src/gui/StartSpel.fxml
@@ -37,7 +37,7 @@
                   </Label>
                   <Label fx:id="lblPrestigepunten" prefHeight="92.0" prefWidth="187.0" text="Totaal aantal prestigepunten:" wrapText="true">
                      <font>
-                        <Font size="25.0" />
+                        <Font size="20.0" />
                      </font>
                   </Label>
                   <Label fx:id="aantalPrestigePunten" text="0">
@@ -149,27 +149,27 @@
                            <GridPane.margin>
                               <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                            </GridPane.margin></Button>
-                        <Label fx:id="lblSmaragdSpelerAantal" text="0" GridPane.columnIndex="1" GridPane.rowIndex="4">
+                        <Label fx:id="lblSmaragdSpelerAantal" GridPane.columnIndex="1">
                            <font>
                               <Font name="RomanC" size="16.0" />
                            </font>
                         </Label>
-                        <Label fx:id="lblRobijnSpelerAantal" text="0" GridPane.columnIndex="1" GridPane.rowIndex="3">
+                        <Label fx:id="lblRobijnSpelerAantal" GridPane.columnIndex="1" GridPane.rowIndex="4">
                            <font>
                               <Font name="RomanC" size="16.0" />
                            </font>
                         </Label>
-                        <Label fx:id="lblDiamantSpelerAantal" text="0" GridPane.columnIndex="1" GridPane.rowIndex="2">
+                        <Label fx:id="lblDiamantSpelerAantal" GridPane.columnIndex="1" GridPane.rowIndex="2">
                            <font>
                               <Font name="RomanC" size="16.0" />
                            </font>
                         </Label>
-                        <Label fx:id="lblSaffierSpelerAantal" text="0" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                        <Label fx:id="lblSaffierSpelerAantal" GridPane.columnIndex="1" GridPane.rowIndex="3">
                            <font>
                               <Font name="RomanC" size="16.0" />
                            </font>
                         </Label>
-                        <Label fx:id="lblOnyxSpelerAantal1" text="0" GridPane.columnIndex="1">
+                        <Label fx:id="lblOnyxSpelerAantal" GridPane.columnIndex="1" GridPane.rowIndex="1">
                            <font>
                               <Font name="RomanC" size="16.0" />
                            </font>
@@ -231,17 +231,17 @@
                         <Button fx:id="btnEdele3" mnemonicParsing="false" onAction="#btnEdele3Clicked" scaleX="0.7" scaleY="0.7" style="-fx-background-color: nofill;" GridPane.columnIndex="3" GridPane.rowIndex="2" />
                         <Button fx:id="btnEdele4" mnemonicParsing="false" onAction="#btnEdele4Clicked" scaleX="0.7" scaleY="0.7" style="-fx-background-color: nofill;" GridPane.columnIndex="4" GridPane.rowIndex="2" />
                         <Button fx:id="btnEdele2" mnemonicParsing="false" onAction="#btnEdele2Clicked" scaleX="0.7" scaleY="0.7" style="-fx-background-color: nofill;" GridPane.columnIndex="2" GridPane.rowIndex="2" />
-                        <ImageView fitHeight="150.0" fitWidth="111.0" pickOnBounds="true" preserveRatio="true" GridPane.rowIndex="3">
+                        <ImageView fx:id="stapelNiveau1" fitHeight="150.0" fitWidth="111.0" pickOnBounds="true" preserveRatio="true" GridPane.rowIndex="3">
                            <image>
                               <Image url="@../images/achterkantNiveau1.png" />
                            </image>
                         </ImageView>
-                        <ImageView fitHeight="150.0" fitWidth="111.0" pickOnBounds="true" preserveRatio="true" GridPane.rowIndex="4">
+                        <ImageView fx:id="stapelNiveau2" fitHeight="150.0" fitWidth="111.0" pickOnBounds="true" preserveRatio="true" GridPane.rowIndex="4">
                            <image>
                               <Image url="@../images/achterkantNiveau2.png" />
                            </image>
                         </ImageView>
-                        <ImageView fitHeight="150.0" fitWidth="111.0" pickOnBounds="true" preserveRatio="true" GridPane.rowIndex="5">
+                        <ImageView fx:id="stapelNiveau3" fitHeight="150.0" fitWidth="111.0" pickOnBounds="true" preserveRatio="true" GridPane.rowIndex="5">
                            <image>
                               <Image url="@../images/achterkantNiveau3.png" />
                            </image>
